--- a/solution-part2/.gitignore
+++ b/solution-part2/.gitignore
@@ -31,7 +31,7 @@ dist
 # Python Environments
 .env
 .venv
-env_*/
+env/
 venv/
 ENV/
 env.bak/
@@ -46,3 +46,6 @@ __pycache__/
 __blobstorage__
 __queuestorage__
 __azurite_db*__.json
+
+# Output files
+output_*
