corrections for self hosted agent

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,13 +3,15 @@ trigger:
     exclude:
       - main
 
+pool:
+  name: Default
+  demands:
+    - Agent.Name -equals N23
+
 pr:
   branches:
     include:
       - '*'
-
-pool:
-  name: Default
 
 jobs:
 - job: CI
