--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,3 @@
-# trigger:
-#   - main
-
-# pool:
-#   name: 'Default'
-
-# steps:
-#   - script: echo "Azure DevOps setup completed!"
-#     displayName: 'Run a simple script'
-
-
 trigger:
   branches:
     exclude:
@@ -25,9 +14,6 @@ pool:
 jobs:
 - job: CI
   displayName: 'Basic CI'
-  pool:
-    vmImage: 'ubuntu-latest'
-
   steps:
   - checkout: self
 
@@ -41,8 +27,11 @@ jobs:
     displayName: 'Script running'
 
   - script: |
+      python -m venv venv
+      source venv\Scripts\activate
+      pip install flake8
       flake8 --max-line-length=100
-    displayName: 'Code Linting'
+    displayName: 'Setup and Code linting with Flake8'
 
   - script: |
       pytest --cov=.
